추가 : changeStream 추가

--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -20,7 +20,7 @@
 		<!-- nav.html을 첨부 -->
 		<%-include('nav.html') %>
 
-		<p>마이페이지입니다.</p>
+		<p><%=user.id %> 마이페이지입니다.</p>
 
 		<!-- Optional JavaScript; choose one of the two! -->
 
