--- a/views/join.ejs
+++ b/views/join.ejs
@@ -19,7 +19,27 @@
 	<body>
 		<!-- nav.html을 첨부 -->
 		<%-include('nav.html') %>
-		<h4>홈입니다.</h4>
+
+		<h4 class="container mt-4"><strong>회원가입</strong></h4>
+
+		<div class="container mt-3">
+			<form action="/join" method="POST">
+				<div class="form-group">
+					<label>아이디</label>
+					<input type="text" class="form-control" name="id" />
+				</div>
+				<div class="form-group">
+					<label>비밀번호</label>
+					<input type="password" class="form-control" name="pw" />
+				</div>
+				<div class="form-group">
+					<label>비밀번호 확인</label>
+					<input type="password" class="form-control" name="pw_chk" />
+				</div>
+				<button type="submit" class="btn btn-danger">Submit</button>
+			</form>
+		</div>
+
 		<!-- Optional JavaScript; choose one of the two! -->
 
 		<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
@@ -33,11 +53,5 @@
 			integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
 			crossorigin="anonymous"
 		></script>
-
-		<!-- Option 2: Separate Popper and Bootstrap JS -->
-		<!--
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
-    --></body>
+	</body>
 </html>
