--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,7 @@
 					<label>비밀번호</label>
 					<input type="text" class="form-control" name="pw" />
 				</div>
-				<button type="submit" class="btn btn-danger">Submit</button>
+				<button type="submit" class="btn btn-danger">로그인</button>
 			</form>
 		</div>
 
