--- a/views/search.ejs
+++ b/views/search.ejs
@@ -15,21 +15,21 @@
 		<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
 
 		<link rel="stylesheet" href="/public/main.css" />
-		<title>Hello, world!</title>
+		<title>검색결과</title>
 	</head>
 
 	<body>
 		<!-- nav.html을 첨부 -->
 		<%-include('nav.html') %>
 
-		<h4 class="ml-2 my-3 text-center">서버에서 가져온 할일 리스트</h4>
+		<h4 class="ml-2 my-3 text-center">검색결과</h4>
 		<!-- <% for(var i=0; i < posts.length ; i++) { %>
     <h4>할일 제목 : <%= posts[i].title  %> </h4>
     <p>할일 마감날짜 : <%= posts[i].date %> </p>
     <button>삭제</button>
     <% } %> -->
 		<div class="container input-group mb-2">
-			<input class="form-control" id="search_input" />
+			<input class="form-control" id="search_input" value="<%= keyword %>" />
 			<button class="input-group-append btn btn-danger" id="search">검색</button>
 		</div>
 
@@ -38,6 +38,9 @@
 				var inputValue = $('#search_input').val();
 				window.location.replace('/search?value=' + inputValue);
 			});
+
+			// var data = { name: 'value', name2: 'value2' };
+			// $.param(data);
 		</script>
 
 		<div class="container">
@@ -47,9 +50,7 @@
 					<p>글번호 : <%= posts[i]._id %></p>
 					<h4>할일 제목 : <%= posts[i].title %></h4>
 					<p>할일 마감날짜 : <%= posts[i].date %></p>
-					<p>작성자 : <%= posts[i].writer %></p>
 					<button class="btn btn-danger delete" data-id="<%= posts[i]._id %>">삭제</button>
-					<button class="btn btn-danger chat" data-id="<%= posts[i].writer %>">방만들기</button>
 				</li>
 				<% } %>
 			</ul>
@@ -68,7 +69,6 @@
 						// AJAX 성공시 실행할 코드
 						// 페이지를 강제로 새로고침? 삭제버튼을 누른 <li> 요소를 제거
 						console.log('성공했슴당.');
-						console.log('삭제 아이디 :' + boardNum);
 						console.log($(e));
 						focusBtn.parent('li').fadeOut();
 					})
@@ -77,15 +77,6 @@
 						console.log(err);
 						alert('요청이 실패되었습니다.');
 					});
-			});
-
-			$('.chat').click((e) => {
-				var _id = e.target.dataset.id;
-				console.log(typeof e.target.dataset.id);
-				$.post('/chatroom', { 당한사람id: _id }).then(() => {
-					console.log(_id);
-					console.log('채팅방 게시물 생성완료');
-				});
 			});
 		</script>
 
